hover effect z-index issue

--- a/src/common-editor.scss
+++ b/src/common-editor.scss
@@ -69,7 +69,7 @@
 	}
 
 	.block-editor-block-list__block:hover {
-		z-index: 0;
+		z-index: 1;
 	}
 }
 
